--- a/index.html
+++ b/index.html
@@ -1,68 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <title>Frontend Mentor | Sunnyside agency landing page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <header class="header">
+      <a class="header__logo" href="/">sunnyside</a>
+      <ul class="header__navlist">
+        <li class="header__item"><a class="header__link" href="#">About</a></li>
+        <li class="header__item"><a class="header__link" href="#">Services</a></li>
+        <li class="header__item"><a class="header__link" href="#">Projects</a></li>
+        <li class="header__item"><a class="header__link" href="#">Contact</a></li>
+      </ul>
+    </header>
+    <main class="main">
+      <section class="hero">
+        <h1 class="hero__title">We are creatives</h1>
+        <div class="hero__arrow">
+          <!-- <svg width="36" height="114">
+            <use href="./images/icon-arrow-down.svg"></use>
+          </svg> -->
+        </div>
+      </section>
+      <section class="about">
+        <h2>Transform your brand</h2>
+        <p>
+          We are a full-service creative agency specializing in helping brands grow fast. Engage
+          your clients through compelling visuals that do most of the marketing for you.
+        </p>
+        <a href="#">Learn more</a>
+        <h2>Stand out to the right audience</h2>
+        <p>
+          Using a collaborative formula of designers, researchers, photographers, videographers, and
+          copywriters, we`ll build and extend your brand in digital places.
+        </p>
+        <a href="#">Learn more</a>
+      </section>
+      <section class="services">
+        <h3>Graphic design</h3>
+        <p>
+          Great design makes you memorable. We deliver artwork that underscores your brand message
+          and captures potential clients` attention.
+        </p>
+        <h3>Photography</h3>
+        <p>
+          Increase your credibility by getting the most stunning, high-quality photos that improve
+          your business image.
+        </p>
+      </section>
+      <section class="testimonials">
+        <h3>Client testimonials</h3>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+        <p>
+          We put our trust in Sunnyside and they delivered, making sure our needs were met and
+          deadlines were always hit.
+        </p>
+        <h4>Emily R.</h4>
+        <p>Marketing Director</p>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  About
-  Services
-  Projects
-  Contact
+        <p>
+          Sunnyside`s enthusiasm coupled with their keen interest in our brand`s success made it a
+          satisfying and enjoyable experience.
+        </p>
+        <h4>Thomas S.</h4>
+        <p>Chief Operating Officer</p>
 
-  We are creatives
-
-  Transform your brand
-
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
-
-  Learn more
-
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <p>
+          Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly
+          recommended!
+        </p>
+        <h4>Jennie F.</h4>
+        <p>Business Owner</p>
+      </section>
+      <section class="projects"></section>
+    </main>
+    <footer class="footer">About Services Projects Contact</footer>
+  </body>
 </html>
+
+<!-- <picture>
+  <source srcset="./images/box1@2x.jpg 2x" media="(min-width: 1200px)" />
+  <img src="./images/box1.jpg" width="370" alt="Процесс написания кода" />
+</picture> -->
