--- a/index.html
+++ b/index.html
@@ -14,81 +14,199 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header class="header">
-      <a class="header__logo" href="/">sunnyside</a>
+    <header class="container header">
+      <a class="header__logo" href="/">
+        <svg>
+          <use href="./images/sprite.svg#logo"></use>
+        </svg>
+      </a>
       <ul class="header__navlist">
         <li class="header__item"><a class="header__link" href="#">About</a></li>
         <li class="header__item"><a class="header__link" href="#">Services</a></li>
         <li class="header__item"><a class="header__link" href="#">Projects</a></li>
         <li class="header__item"><a class="header__link" href="#">Contact</a></li>
       </ul>
-    </header>
-    <main class="main">
-      <section class="hero">
+      <div class="hero">
         <h1 class="hero__title">We are creatives</h1>
         <div class="hero__arrow">
-          <!-- <svg width="36" height="114">
-            <use href="./images/icon-arrow-down.svg"></use>
-          </svg> -->
+          <svg width="36" height="114">
+            <use href="./images/sprite.svg#arrow-down"></use>
+          </svg>
+        </div>
+      </div>
+      <button class="header__menu-btn" type="button">
+        <svg>
+          <use href="./images/sprite.svg#icon-hamburger"></use>
+        </svg>
+      </button>
+      <div class="header__menu">
+        <ul class="header__navlist">
+          <li class="header__menu-item"><a class="header__menu-link" href="#">About</a></li>
+          <li class="header__menu-item"><a class="header__menu-link" href="#">Services</a></li>
+          <li class="header__menu-item"><a class="header__menu-link" href="#">Projects</a></li>
+          <li class="header__menu-item"><a class="header__menu-link" href="#">Contact</a></li>
+        </ul>
+      </div>
+    </header>
+    <main class="main">
+      <section class="container about">
+        <div>
+          <h2>Transform your brand</h2>
+          <p>
+            We are a full-service creative agency specializing in helping brands grow fast. Engage
+            your clients through compelling visuals that do most of the marketing for you.
+          </p>
+          <a href="#">Learn more</a>
+        </div>
+        <div>
+          <picture>
+            <source srcset="./images/desktop/image-transform.jpg" media="(min-width: 376px)" />
+            <img src="./images/mobile/image-transform.jpg" alt="Transform" />
+          </picture>
+        </div>
+        <div>
+          <picture>
+            <source srcset="./images/desktop/image-stand-out.jpg" media="(min-width: 376px)" />
+            <img src="./images/mobile/image-stand-out.jpg" alt="Stand Out" />
+          </picture>
+        </div>
+        <div>
+          <h2>Stand out to the right audience</h2>
+          <p>
+            Using a collaborative formula of designers, researchers, photographers, videographers,
+            and copywriters, we`ll build and extend your brand in digital places.
+          </p>
+          <a href="#">Learn more</a>
         </div>
       </section>
-      <section class="about">
-        <h2>Transform your brand</h2>
-        <p>
-          We are a full-service creative agency specializing in helping brands grow fast. Engage
-          your clients through compelling visuals that do most of the marketing for you.
-        </p>
-        <a href="#">Learn more</a>
-        <h2>Stand out to the right audience</h2>
-        <p>
-          Using a collaborative formula of designers, researchers, photographers, videographers, and
-          copywriters, we`ll build and extend your brand in digital places.
-        </p>
-        <a href="#">Learn more</a>
+      <section class="container services">
+        <div class="services__design">
+          <h3>Graphic design</h3>
+          <p>
+            Great design makes you memorable. We deliver artwork that underscores your brand message
+            and captures potential clients` attention.
+          </p>
+        </div>
+        <div class="services__photography">
+          <h3>Photography</h3>
+          <p>
+            Increase your credibility by getting the most stunning, high-quality photos that improve
+            your business image.
+          </p>
+        </div>
       </section>
-      <section class="services">
-        <h3>Graphic design</h3>
-        <p>
-          Great design makes you memorable. We deliver artwork that underscores your brand message
-          and captures potential clients` attention.
-        </p>
-        <h3>Photography</h3>
-        <p>
-          Increase your credibility by getting the most stunning, high-quality photos that improve
-          your business image.
-        </p>
-      </section>
-      <section class="testimonials">
+      <section class="container testimonials">
         <h3>Client testimonials</h3>
 
-        <p>
-          We put our trust in Sunnyside and they delivered, making sure our needs were met and
-          deadlines were always hit.
-        </p>
-        <h4>Emily R.</h4>
-        <p>Marketing Director</p>
-
-        <p>
-          Sunnyside`s enthusiasm coupled with their keen interest in our brand`s success made it a
-          satisfying and enjoyable experience.
-        </p>
-        <h4>Thomas S.</h4>
-        <p>Chief Operating Officer</p>
-
-        <p>
-          Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly
-          recommended!
-        </p>
-        <h4>Jennie F.</h4>
-        <p>Business Owner</p>
+        <ul>
+          <li>
+            <img src="./images/image-emily.jpg" alt="Emily" />
+            <p>
+              We put our trust in Sunnyside and they delivered, making sure our needs were met and
+              deadlines were always hit.
+            </p>
+            <h4>Emily R.</h4>
+            <p>Marketing Director</p>
+          </li>
+          <li>
+            <img src="./images/image-thomas.jpg" alt="Thomas" />
+            <p>
+              Sunnyside`s enthusiasm coupled with their keen interest in our brand`s success made it
+              a satisfying and enjoyable experience.
+            </p>
+            <h4>Thomas S.</h4>
+            <p>Chief Operating Officer</p>
+          </li>
+          <li>
+            <img src="./images/image-jennie.jpg" alt="Jennie" />
+            <p>
+              Incredible end result! Our sales increased over 400% when we worked with Sunnyside.
+              Highly recommended!
+            </p>
+            <h4>Jennie F.</h4>
+            <p>Business Owner</p>
+          </li>
+        </ul>
       </section>
-      <section class="projects"></section>
+      <section class="container projects">
+        <ul class="projects__gallery">
+          <li>
+            <picture>
+              <source
+                srcset="./images/desktop/image-gallery-milkbottles.jpg"
+                media="(min-width: 376px)"
+              />
+              <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="Milkbottles" />
+            </picture>
+          </li>
+          <li>
+            <picture>
+              <source
+                srcset="./images/desktop/image-gallery-orange.jpg"
+                media="(min-width: 376px)"
+              />
+              <img src="./images/mobile/image-gallery-orange.jpg" alt="Orange" />
+            </picture>
+          </li>
+          <li>
+            <picture>
+              <source srcset="./images/desktop/image-gallery-cone.jpg" media="(min-width: 376px)" />
+              <img src="./images/mobile/image-gallery-cone.jpg" alt="Cone" />
+            </picture>
+          </li>
+          <li>
+            <picture>
+              <source
+                srcset="./images/desktop/image-gallery-sugarcubes.jpg"
+                media="(min-width: 376px)"
+              />
+              <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="Sugarcubes" />
+            </picture>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer class="footer">About Services Projects Contact</footer>
+    <footer class="container footer">
+      <a class="footer__logo" href="/">
+        <svg>
+          <use href="./images/sprite.svg#logo"></use>
+        </svg>
+      </a>
+      <ul class="footer__navlist">
+        <li class="footer__nav-item"><a class="footer__nav-link" href="#">About</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Services</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Projects</a></li>
+      </ul>
+      <ul class="footer__social">
+        <li class="footer__social-item">
+          <a href="#" class="footer__social-link">
+            <svg width="20" height="20">
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer__social-item">
+          <a href="#" class="footer__social-link">
+            <svg width="20" height="20">
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer__social-item">
+          <a href="#" class="footer__social-link">
+            <svg width="20" height="20">
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer__social-item">
+          <a href="#" class="footer__social-link">
+            <svg width="20" height="20">
+              <use href="./images/sprite.svg#icon-pinterest"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
-
-<!-- <picture>
-  <source srcset="./images/box1@2x.jpg 2x" media="(min-width: 1200px)" />
-  <img src="./images/box1.jpg" width="370" alt="Процесс написания кода" />
-</picture> -->
